css error FIX- splitting fom gap in ttt board

--- a/src/pages/Memory/Memory.css
+++ b/src/pages/Memory/Memory.css
@@ -63,12 +63,12 @@
   display: flex;
   flex-direction: column;
 }
-.row {
+.board-row {
   display: flex;
   gap: 1.5rem;
+  padding-bottom: 2rem;
   justify-content: center;
   align-items: center;
-  /* border: solid black 1px; */
 }
 .Card {
   /* background-color: beige; */
